--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
 
     <title>D3 Demos</title>
-      <link rel="stylesheet" type="text/css" href="bubblestyle.css">
+      <link rel="stylesheet" type="text/css" href="css/bubblestyle.css">
 
 </head>
 <body>
